--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Django==5.2.4
-pydantic-ai==0.14.0
-requests==2.31.0
-python-dotenv==1.0.0
-gunicorn==20.1.0
-whitenoise==6.5.0
+Django
+pydantic-ai
+requests
+python-dotenv
+gunicorn
+whitenoise
 
